[package]
name = "sthp"
version = "0.8.7"
license = "MIT"
authors = ["Blackswan <nxtreaming@gmail.com>"]
edition = "2021"
categories = ["command-line-utilities"]
description = "Convert Socks5 proxy into Http proxy"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6", default-features = false }
http = "1.1"
hyper = { version = "1.5", features = ["client","server","http1"] }
clap = { version = "4", features = ["derive"] }
tokio-socks = "0.5"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "signal", "process", "io-util", "net"] }
bytes = "1.8"
http-body-util = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "server-auto"] }
base64 = "0.22"
thiserror = "1.0"
pin-project = "1.1"
dashmap = "6.1.0"
crossbeam-utils = "0.8.21"
